<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="username_label">Username:</string>
    <string name="username_box">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_box">Please enter your password</string>
    <string name="confirmation_label">Confirm Password:</string>
    <string name="confirmation_box">Please confirm your password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="welcome_format">Welcome %1$s!</string>

</resources>
